--- a/web/views/generate.haml
+++ b/web/views/generate.haml
@@ -1,3 +1,5 @@
+%link{rel: :stylesheet, type: :'text/css', href: '/css/generate.css'}
+
 - @chars.each do |c|
 	.character{:id => c.name}
 		:markdown
@@ -7,43 +9,3 @@
 		%ul.traits
 			- c.traits_to_s_with_level.each do |elem|
 				%li{class: elem.first} #{elem.last}
-
-/ %style{:type => "text/css"}
-/ 	:sass
-/ 		$blue-level: #00d;
-/ 		$green-level: #0d0;
-/ 		$purple-level: #d0d;
-
-/ 		$text-color: #ddd;
-
-:css
-	.character {
-		border: 2px solid;
-		text-align: center;
-		width: 200px;
-		height: 220px;
-		padding: 5px;
-		margin: 10px;
-		float: left;
-		}
-		h3 {
-			margin: 10px;
-			/ color: #ddd;
-		}
-		hr {
-			width: 160px;
-		}
-
-		ul.traits {
-			list-style-type: circle;
-			color: red;
-			text-align: left;
-			font-size: 1.3em;
-			margin: 15px 10px;
-		}
-		/ li.blue { color: $blue-level }
-		/ li.purple { color: $purple-level }
-		/ li.green { color: $green-level }
-		li.blue { color: blue }
-		li.purple { color: purple }
-		li.green { color: green }
